--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -6,8 +6,7 @@
 .form{
     display:grid;
     column-gap: 48px;
-    grid-template-columns: 1fr 1fr;
-    //width: 100%;
+    grid-template-columns: 1fr 1fr;    
 }    
 .fields{
     text-align: center;
@@ -16,4 +15,35 @@
     height: 30px;
     margin: 0px 5px 0px 0px;
 }
-
+.buttonSection{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 32px;
+}
+.btnReset{
+    padding: 12px 48px;
+    border-radius: 50px;
+    border: none;
+    
+    cursor: pointer;    
+    background-color: white;    
+    color: #803093;    
+    &:hover {
+        opacity: 0.80;
+    }
+}
+.btnSubmit{
+    padding: 12px 48px;
+    border-radius: 50px;
+    border: none;
+    margin-right: 40px;
+    cursor: pointer;   
+    background-color: purple;
+    color: #ffffff;
+    &:hover {
+        opacity: 0.80;
+    }
+}
