--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -7,6 +7,9 @@
     display:grid;
     column-gap: 48px;
     grid-template-columns: 1fr 1fr;    
+    @media (max-width: 768px) {
+        grid-template-columns: 1fr;
+      }
 }    
 .fields{
     text-align: center;
